<resources>
    <string name="app_name">Concerts</string>

    <string-array name="month">
        <item>января</item>
        <item>февраля</item>
        <item>марта</item>
        <item>апреля</item>
        <item>мая</item>
        <item>июня</item>
        <item>июля</item>
        <item>августа</item>
        <item>сентября</item>
        <item>октября</item>
        <item>ноября</item>
        <item>декабря</item>
    </string-array>

    <string name="sign_up_now"><![CDATA[Нет аккаунта? <b>Зарегистрируйтесь</b>]]></string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="login">Вход</string>
    <string name="register">Регистрация</string>
    <string name="offline">Оффлайн</string>
    <string name="users_login">Логин</string>
    <string name="users_login_or_email">Логин или E-Mail</string>
    <string name="email">E-Mail</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="password">Пароль</string>
    <string name="forgot_password">Забыли пароль?</string>

    <string name="going">Иду</string>
    <string name="maybe">Возможно иду</string>
    <string name="not_going">Не иду</string>

    <plurals name="days_word">
        <item quantity="zero">дней</item>
        <item quantity="one">день</item>
        <item quantity="two">дня</item>
        <item quantity="few">дня</item>
        <item quantity="many">дней</item>
        <item quantity="other">дней</item>
    </plurals>

    <plurals name="concerts_plural">
        <item quantity="zero">концертов</item>
        <item quantity="one">концерт</item>
        <item quantity="two">концерта</item>
        <item quantity="few">концерта</item>
        <item quantity="many">концертов</item>
        <item quantity="other">концертов</item>
    </plurals>

    <plurals name="friends_plural">
        <item quantity="zero">друзей</item>
        <item quantity="one">друг</item>
        <item quantity="two">друга</item>
        <item quantity="few">друга</item>
        <item quantity="many">друзей</item>
        <item quantity="other">друзей</item>
    </plurals>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
