<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDarkSignIn">
    <androidx.core.widget.NestedScrollView
        android:id="@+id/login_scroll"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/login"
                android:textColor="@color/textActive"
                style="@style/TextAppearance.AppCompat.Display1"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                style="@style/LoginTextInputLayoutStyle"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_login"
                    android:drawablePadding="8dp"
                    android:hint="@string/users_login_or_email"
                    android:textColor="@color/textActive"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:imeOptions="flagNoExtractUi"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/LoginTextInputLayoutStyle"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="8dp"
                    android:hint="@string/password"
                    android:textColor="@color/textActive"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:imeOptions="flagNoExtractUi"/>
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/forgot_password"
                android:textColor="@color/textInactive"
                android:textStyle="bold"
                android:maxLines="1"
                app:autoSizeTextType="uniform"
                app:autoSizeMinTextSize="8sp"
                app:autoSizeMaxTextSize="14sp"
                app:autoSizeStepGranularity="1sp" />
            <LinearLayout
                android:id="@+id/buttons_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:gravity="center">
                <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                    android:id="@+id/button_sign_in"
                    android:layout_width="125dp"
                    android:layout_height="50dp"
                    android:text="@string/sign_in"
                    android:textColor="@color/textActive"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/button_login_shape"
                    app:spinning_bar_width="3dp"
                    app:spinning_bar_color="#FFF"
                    app:spinning_bar_padding="8dp"
                    app:initialCornerAngle="4dp"/>
                <!--<com.google.android.material.button.MaterialButton
                    android:id="@+id/button_sign_in"
                    android:layout_width="125dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="8dp"
                    app:backgroundTint="@color/colorPrimary"
                    app:cornerRadius="4dp"
                    android:text="@string/sign_in"
                    android:textColor="@color/textActive"/>-->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_offline"
                    android:layout_width="125dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="8dp"
                    app:backgroundTint="@android:color/transparent"
                    app:cornerRadius="4dp"
                    app:strokeColor="@color/textActive"
                    app:strokeWidth="1dp"
                    android:text="@string/offline"
                    android:maxLines="1"
                    android:textColor="@color/textActive"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/login_scroll"
        android:gravity="bottom">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sign_up"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:textColor="@color/textActive"
            android:maxLines="1"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeMaxTextSize="15sp"
            app:autoSizeStepGranularity="1sp" />
    </LinearLayout>
</RelativeLayout>