<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sign_up_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDarkSignUp"
    android:clickable="true"
    android:focusable="true">
    <androidx.core.widget.NestedScrollView
        android:id="@+id/login_scroll"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/register"
                android:textColor="@color/textActive"
                style="@style/TextAppearance.AppCompat.Display1"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:weightSum="2">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_weight="1"
                    android:id="@+id/input_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    style="@style/LoginTextInputLayoutStyle"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_first_last_name"
                        android:drawablePadding="8dp"
                        android:hint="@string/first_name"
                        android:nextFocusDown="@+id/edit_last_name"
                        android:textColor="@color/textActive"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_weight="1"
                    android:id="@+id/input_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    style="@style/LoginTextInputLayoutStyle"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:nextFocusDown="@+id/edit_login"
                        android:textColor="@color/textActive"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                style="@style/LoginTextInputLayoutStyle"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_login"
                    android:drawablePadding="8dp"
                    android:nextFocusDown="@+id/edit_email"
                    android:hint="@string/users_login"
                    android:textColor="@color/textActive"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                style="@style/LoginTextInputLayoutStyle"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="8dp"
                    android:hint="@string/email"
                    android:nextFocusDown="@+id/edit_password"
                    android:textColor="@color/textActive"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                style="@style/LoginTextInputLayoutStyle"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="8dp"
                    android:hint="@string/password"
                    android:textColor="@color/textActive"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center"
                app:backgroundTint="@android:color/transparent"
                app:cornerRadius="4dp"
                app:strokeColor="@color/textActive"
                app:strokeWidth="1dp"
                android:text="@string/sign_up"
                android:maxLines="1"
                android:textColor="@color/textActive"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <LinearLayout
        android:id="@+id/loading"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#a0000000">
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/textActive"/>
    </LinearLayout>
</RelativeLayout>